--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <h1>hi there</h1>
+    <h2>hi there</h2>
+    <h3>Just a test repository</h3>
 </body>
 </html>
